<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/prompt_bg"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="20dp"
    app:layout_constraintCircleRadius="20dp">

    <TextView
        android:id="@+id/textViewNewRoomTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/piedra"
        android:text="@string/createRoom"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCode"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/piedra"
        android:importantForAutofill="no"
        android:text="@string/code"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewRoomTitle" />

    <TextView
        android:id="@+id/textViewGenCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="true"
        android:focusable="true"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewCode"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewRoomTitle"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/imageButtonCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/btn_copy"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewGenCode"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewRoomTitle"
        app:srcCompat="?attr/actionModeCopyDrawable"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextEnterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:fontFamily="@font/piedra"
        android:hint="@string/enterYourName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorDarkMedium"
        android:textCursorDrawable="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGenCode" />

    <ImageButton
        android:id="@+id/imageButtonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_go"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:tintMode="src_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterName"
        app:srcCompat="@android:drawable/ic_menu_send"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>